// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Assets transformer for www configs should build the README.md file 1`] = `
{
  "data": "[//]: # ( )
[//]: # (This file is automatically generated by a \`metapak\`)
[//]: # (module. Do not change it except between the)
[//]: # (\`content:start/end\` flags, your changes would)
[//]: # (be overridden.)
[//]: # ( )
# module
> A great module!

[![GitHub license](https://img.shields.io/badge/license-MIT-blue.svg)](https://github.com/nfroidure/module/blob/master/LICENSE)


[//]: # (::contents:start)

## Usage

Just require me


[//]: # (::contents:end)


# API
\`\`\`
toto.lol()
\`\`\`

# Authors
- [Nicolas Froidure](http://insertafter.com/en/index.html)
- John Doe

# License
[MIT](https://github.com/nfroidure/module/blob/master/LICENSE)
",
  "name": "README.md",
}
`;

exports[`Assets transformer for www configs should build the README.md file with additional badges 1`] = `
{
  "data": "[//]: # ( )
[//]: # (This file is automatically generated by a \`metapak\`)
[//]: # (module. Do not change it except between the)
[//]: # (\`content:start/end\` flags, your changes would)
[//]: # (be overridden.)
[//]: # ( )
# module
> A great module!

[![GitHub license](https://img.shields.io/badge/license-MIT-blue.svg)](https://github.com/nfroidure/module/blob/master/LICENSE)
[![Build status](https://travis-ci.com/nfroidure/module.svg?branch=master)](https://travis-ci.com/github/nfroidure/module)
[![Coverage Status](https://coveralls.io/repos/github/nfroidure/module/badge.svg?branch=master)](https://coveralls.io/github/nfroidure/module?branch=master)


[//]: # (::contents:start)

## Usage

Just require me


[//]: # (::contents:end)


# API
\`\`\`
toto.lol()
\`\`\`

# Authors
- [Nicolas Froidure](http://insertafter.com/en/index.html)
- John Doe

# License
[MIT](https://github.com/nfroidure/module/blob/master/LICENSE)
",
  "name": "README.md",
}
`;

exports[`Assets transformer for www configs should build the README.md file with no badge 1`] = `
{
  "data": "[//]: # ( )
[//]: # (This file is automatically generated by a \`metapak\`)
[//]: # (module. Do not change it except between the)
[//]: # (\`content:start/end\` flags, your changes would)
[//]: # (be overridden.)
[//]: # ( )
# module
> A great module!



[//]: # (::contents:start)

## Usage

Just require me


[//]: # (::contents:end)


# API
\`\`\`
toto.lol()
\`\`\`

# Authors
- [Nicolas Froidure](http://insertafter.com/en/index.html)
- John Doe

# License
[MIT](https://github.com/nfroidure/module/blob/master/LICENSE)
",
  "name": "README.md",
}
`;

exports[`Assets transformer for www configs should work with scoped packages 1`] = `
{
  "data": "[//]: # ( )
[//]: # (This file is automatically generated by a \`metapak\`)
[//]: # (module. Do not change it except between the)
[//]: # (\`content:start/end\` flags, your changes would)
[//]: # (be overridden.)
[//]: # ( )
# @scope/module
> A great module!

[![GitHub license](https://img.shields.io/badge/license-MIT-blue.svg)](https://github.com/nfroidure/scope-module/blob/master/LICENSE)
[![Build status](https://travis-ci.com/nfroidure/module.svg?branch=master)](https://travis-ci.com/github/nfroidure/module)
[![Coverage Status](https://coveralls.io/repos/github/nfroidure/module/badge.svg?branch=master)](https://coveralls.io/github/nfroidure/module?branch=master)


[//]: # (::contents:start)

## Usage

Just require me


[//]: # (::contents:end)


# API
\`\`\`
toto.lol()
\`\`\`

# Authors
- [Nicolas Froidure](http://insertafter.com/en/index.html)
- John Doe

# License
[MIT](https://github.com/nfroidure/scope-module/blob/master/LICENSE)
",
  "name": "README.md",
}
`;

exports[`Assets transformer for www configs should work with scoped packages inside a monorepo 1`] = `
{
  "data": "[//]: # ( )
[//]: # (This file is automatically generated by a \`metapak\`)
[//]: # (module. Do not change it except between the)
[//]: # (\`content:start/end\` flags, your changes would)
[//]: # (be overridden.)
[//]: # ( )
# @scope/module
> A great module!

[![GitHub license](https://img.shields.io/badge/license-MIT-blue.svg)](https://github.com/nfroidure/scope/blob/master/packages/scope-module/LICENSE)
[![Build status](https://travis-ci.com/nfroidure/module.svg?branch=master)](https://travis-ci.com/github/nfroidure/module)
[![Coverage Status](https://coveralls.io/repos/github/nfroidure/module/badge.svg?branch=master)](https://coveralls.io/github/nfroidure/module?branch=master)


[//]: # (::contents:start)

## Usage

Just require me


[//]: # (::contents:end)


# API
\`\`\`
toto.lol()
\`\`\`

# Authors
- [Nicolas Froidure](http://insertafter.com/en/index.html)
- John Doe

# License
[MIT](https://github.com/nfroidure/scope/blob/master/packages/scope-module/LICENSE)
",
  "name": "README.md",
}
`;
